- Fix compatibility with Cobblemon 1.7+